# Capstone_MD030

./: .gitignore  README.md
Python/Demo_folder/: live_classification_2.py  live_classification_3.py  live_trail.py  plot_pointcloud.py  pointcloud.csv  realsense_person_detect.py
Python/Demo_folder/Classification/: live_classification.py
Python/Demo_folder/Point_Cloud/: live_pointcloud.py
Python/Demo_folder/Radar/: profile.cfg  radar_module.py
Python/Demo_folder/Realsense/: realsense_depth_view.py
experiments/: README.md
experiments/Fusion_Demo_1/: camera_module.py  radar_module.md
experiments/Fusion_Demo_2/: camera_frames.csv
experiments/Machine_Learning/Center_Fusion/: requirements.txt  transform_pc.py
experiments/Raw_Data_Collection/: README.md
experiments/THE_LATEST/: README_RAW_DATA.md  camera_to_rosbridge_raw.py  radar_module_raw.py  radar_to_rosbridge_raw.py
experiments/Yo/: radar_module.py  radar_pc_to_camera.py
experiments/fusion_demo_04_14_2026/: brain_node.py  camera_to_rosbridge.py  gui_app.py
experiments/ros_prac/Fusion_Demo_1/: CameraNode_RosDisplay.py  (+1 more)
src/: Environment_Setup.md  README.md  calibration.json  camera_module.py  camera_to_rosbridge.py  gui_app.py
src/Python/Machine_Learning/Center_Fusion/: centerfusion_debug.yaml  main.py  pyproject.toml  test_transform_pc.py
src/Python/Machine_Learning/Center_Fusion/utils/: transform_pointcloud.py
src/documentation/: 01_project_overview.md  02_system_architecture.md  03_math_and_science.md  04_code_guide.md  05_ros_topics.md  06_setup_and_running.md  code_guide.md  index.md
(+59 files in other folders)
