[project]
name = "center-fusion"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9, <3.10"
dependencies = [
    "lightning>=2.3.3",
    "matplotlib>=3.9.4",
    "numpy<=1.26.4",
    "torch==2.0.1+cu118",
    "torchaudio==2.0.2+cu118",
    "torchvision==0.15.2+cu118",
    "yacs>=0.1.8",
    "setuptools==70.2.0",
    "psutil>=7.2.2",
    "nuscenes-devkit>=1.1.11",
    "torchinfo>=1.8.0",
]
[tool.uv.sources]
torch = [
    { index = "pytorch-cuda" },
]
torchvision = [
    { index = "pytorch-cuda" },
]
torchaudio = [
    { index = "pytorch-cuda" },
]

[[tool.uv.index]]
name = "pytorch-cuda"
url = "https://download.pytorch.org/whl/cu118"
explicit = true
